theme.css
/* ... */
.theme-dark {
	--base-d: 0%;

	/* Core surfaces */
	--titlebar-background: rgb(42, 42, 42);
	--background-secondary: rgb(42, 42, 42);
	--background-secondary-alt: rgba(18, 18, 18, 0.1);
	--nav-item-background-active: rgba(245, 245, 245, 0.1);
	--nav-item-color-active: var(--text-accent);
	--nav-indentation-guide-color: rgba(245, 245, 245, 0.1);
	--background-modifier-border: rgba(245, 245, 245, 0.15);
	--background-modifier-hover: rgba(245, 245, 245, 0.1);
	--floating-toc-background-color: transparent;
	--blockquote-border-color: rgba(245, 245, 245, 0.2);
	--indentation-guide-color: rgba(245, 245, 245, 0.08);
	--block-border-color: rgba(245, 245, 245, 0.3);
	--hr-color: rgba(245, 245, 245, 0.2);
	--table-header-background: rgba(245, 245, 245, 0.1);
	--indentation-guide-color-active: var(--indentation-guide-color);
	--scrollbar-thumb-color: rgba(255, 255, 255, 0.2);
	--workspace-background-translucent: hsla(0, 0%, 0%, 0.3);
	--text-color: rgb(240, 240, 240);
	--tree-item-color: rgba(210, 210, 210, 0.8);
	--active-border-color: rgba(0, 157, 255, 0.8);
	--statusbar-bg-color: rgba(28, 28, 28, 0.7);
	--model-bg-color: rgba(28, 28, 28, 0.1);
	--app-model-bg-color: rgba(28, 28, 28, 0.8);
	--editor-bg-color: rgba(28, 28, 28, 0);
	--suggestion-bg-color: rgba(28, 28, 28, 0.1);
	--code-background: rgba(245, 245, 245, 0.15);
	--background-modifier-form-field: rgba(245, 245, 245, 0.04);
	--win-blur: 20px;
	--win-window-brightness: 0.9;
	--win-editor-bg-color: #121212a6;
	--win-window-opacity: 0.2;
	--background-setting-item: #242424;
	--background-setting: rgba(18, 18, 18);
	--text-highlight-bg: var(--blockquote-border-color);
	--list-marker-color: rgba(245, 245, 245, 0.6);
	--glass-bg-color: rgba(28, 28, 28, 0.7);
	--text-shadow-color: white;
	--divider-color: rgba(255, 255, 255, 0.01);
	--shadow-color: rgba(245, 245, 245, 0.08);
	--side-split-bg-color: rgba(28, 28, 28, 0.3);
}

.theme-light {
	--base-d: 0%;

	/* Core surfaces */
	--titlebar-background: rgb(248, 248, 248);
	--background-secondary: rgb(249, 249, 249);
	--background-secondary-alt: rgba(240, 240, 240, 0.1);
	--nav-item-background-active: rgba(0, 0, 0, 0.1);
	--nav-item-color-active: var(--text-accent);
	--background-modifier-hover: rgba(28, 28, 28, 0.1);
	--background-modifier-border: rgba(28, 28, 28, 0.09);
	--nav-indentation-guide-color: rgba(28, 28, 28, 0.05);
	--indentation-guide-color: rgba(28, 28, 28, 0.05);
	--indentation-guide-color-active: var(--indentation-guide-color);
	--block-border-color: rgba(28, 28, 28, 0.25);
	--floating-toc-background-color: transparent;
	--blockquote-border-color: rgba(28, 28, 28, 0.2);
	--scrollbar-thumb-color: rgba(0, 0, 0, 0.2);
	--workspace-background-translucent: hsla(0, 0%, 100%, 0.05);
	--text-color: rgb(8, 8, 8);
	--tree-item-color: rgb(20, 20, 20, 0.8);
	--active-border-color: rgb(0, 121, 172);
	--statusbar-bg-color: rgba(248, 248, 248, 0.7);
	--model-bg-color: rgba(248, 248, 248, 0.1);
	--app-model-bg-color: rgba(248, 248, 248, 0.8);
	--editor-bg-color: rgba(255, 255, 255, 0);
	--suggestion-bg-color: rgba(248, 248, 248, 0.1);
	--divider-color: rgba(0, 0, 0, 0.01);
	--code-background: rgba(28, 28, 28, 0.1);
	--background-modifier-form-field: rgba(230, 230, 230, 0.5);
	--win-blur: 15px;
	--win-window-brightness: 0.9;
	--win-editor-bg-color: #f0f0f0a6;
	--win-window-opacity: 0.15;
	--background-setting-item: rgba(255, 255, 255, 0.6);
	--background-setting: rgba(255, 255, 255);
	--text-highlight-bg: var(--blockquote-border-color);
	--table-header-background: rgba(28, 28, 28, 0.1);
	--glass-bg-color: rgba(248, 248, 248, 0.6);
	--text-shadow-color: black;
	--shadow-color: rgba(0, 0, 0, 0.06);
	--side-split-bg-color: rgba(248, 248, 248, 0.3);
}

body:not(.mod-macos).theme-dark {
	--indentation-guide-color: rgba(245, 245, 245, 0.1);
	--nav-indentation-guide-color: rgba(245, 245, 245, 0.1);
	--list-marker-color: rgba(245, 245, 245, 0.25);
}

.is-mobile {
	--window-font-size: calc(var(--window-font-size) * 0.9);
	--input-radius: 20px;
	--mobile-sidebar-radius: 34px;
	--mobile-sidebar-max-width: 90%;
	--setting-items-radius: 20px;
	--input-height: 40px;
	--editor-list-guide-offset: 4px;
	--editor-list-guide-content-offset: 10px;
	--editor-list-ol-width: 34px;
	--editor-list-ol-font-size: 17px;
	--editor-list-ol-padding-right: 6px;
	--editor-list-formatting-margin-right: -5px;
	--editor-list-ol-margin-left: -7px;
	--editor-list-ul-width: 22px;
	--editor-list-ul-font-size: 12px;
	--editor-list-ul-margin-left: -7.5px;
	--editor-list-ul-margin-right: 6px;
	--editor-list-ul-translate-y: -2px;
	--editor-task-label-margin-left: -7px;
	--editor-task-label-nested-margin-left: -9px;
}

.is-tablet {
	--mobile-sidebar-width-pinned: 480px;
	--mobile-sidebar-min-width: 260px;
	--mobile-sidebar-max-width: 480px;
	--ribbon-width: 48px;
	--editor-list-guide-offset: 4px;
	--editor-list-guide-content-offset: 11px;
	--editor-list-ol-width: 36px;
	--editor-list-ol-font-size: 18px;
	--editor-list-ol-padding-right: 7px;
	--editor-list-formatting-margin-right: -6px;
	--editor-list-ol-margin-left: -7px;
	--editor-list-ul-width: 24px;
	--editor-list-ul-font-size: 13px;
	--editor-list-ul-margin-left: -10px;
	--editor-list-ul-margin-right: 6px;
	--editor-list-ul-translate-y: -2px;
	--editor-task-label-margin-left: -8px;
	--editor-task-label-nested-margin-left: -10px;
}

.is-mobile.theme-light {
	--card-border-color: rgba(28, 28, 28, 0.05);
	--editor-bg-color: rgb(250, 250, 250);
}

.is-mobile.theme-light .menu {
	--interactive-normal: rgba(255, 255, 255, 0.5);
}

.is-mobile.theme-dark {
	--interactive-normal: rgba(68, 68, 68, 0.6);
	--indentation-guide-color: rgba(245, 245, 245, 0.1);
	--card-border-color: rgba(80, 80, 80, 0.1);
	--editor-bg-color: rgb(28, 28, 28);
}

.is-translucent {
	--nav-item-background-active: transparent;
}

.mobile-navbar-actions {
	--icon-size: 22px;
}

body:not(.is-mobile).theme-dark {
	--background-primary: rgb(28, 28, 28);
}
/* ... */

